# mrpt_slam

./: .gitignore  .travis.yml  README.md  stack.xml
mrpt_ekf_slam_2d/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mrpt_ekf_slam_2d/config/: rosconsole.config
mrpt_ekf_slam_2d/include/: mrpt_ekf_slam_2d.h
mrpt_ekf_slam_2d/include/mrpt_ekf_slam_2d/: mrpt_ekf_slam_2d.h  mrpt_ekf_slam_2d_wrapper.h
mrpt_ekf_slam_2d/launch/: ekf_slam_2d.launch  ekf_slam_2d_rawlog.launch
mrpt_ekf_slam_2d/rviz/: rviz_conf_ekf_2d.rviz
mrpt_ekf_slam_2d/src/: mrpt_ekf_slam_2d.cpp  mrpt_ekf_slam_2d_app.cpp  mrpt_ekf_slam_2d_wrapper.cpp
mrpt_ekf_slam_2d/tutorial/: kf-slam_demo_2d.ini  kf-slam_demo_2d.rawlog
mrpt_ekf_slam_3d/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mrpt_ekf_slam_3d/config/: rosconsole.config
mrpt_ekf_slam_3d/include/mrpt_ekf_slam_3d/: mrpt_ekf_slam_3d.h  mrpt_ekf_slam_3d_wrapper.h
mrpt_ekf_slam_3d/launch/: ekf_slam_3d.launch  ekf_slam_3d_rawlog.launch  ekf_slam_3d_wheeled_robot.launch
mrpt_ekf_slam_3d/rviz/: rviz_conf_ekf_3d.rviz
mrpt_ekf_slam_3d/src/: mrpt_ekf_slam_3d.cpp  mrpt_ekf_slam_3d_app.cpp  mrpt_ekf_slam_3d_wrapper.cpp
mrpt_ekf_slam_3d/tutorial/: kf-slam_6D_demo.ini
mrpt_graphslam_2d/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mrpt_graphslam_2d/config/: ros_laser_odometry.ini  ros_laser_odometry_LC_MR_real.ini  ros_odometry_2DRangeScans.ini  ros_odometry_2DRangeScans_LC.ini  ros_odometry_2DRangeScans_LC_MR.ini  ros_odometry_2DRangeScans_LC_MR_real.ini  ros_odometry_2DRangeScans_LC_MR_simul.ini  ros_odometry_2DRangeScans_LC_version.ini
mrpt_graphslam_2d/demo/: demo.launch  graphslam.launch
mrpt_graphslam_2d/include/mrpt_graphslam_2d/: CConnectionManager.h  CGraphSlamEngine_CM.h  CGraphSlamEngine_CM_impl.h  CGraphSlamEngine_MR.h  CGraphSlamEngine_MR_impl.h  CGraphSlamEngine_ROS.h  CGraphSlamEngine_ROS_impl.h  CGraphSlamHandler_ROS.h  CGraphSlamHandler_ROS_impl.h  CGraphSlamResources.h  CGraphSlam_ROS.h  CGraphSlam_ROS_MR.h  CGraphSlam_ROS_impl.h  CMapMerger.h  TNeighborAgentMapProps.h  TUserOptionsChecker_ROS.h  TUserOptionsChecker_ROS_impl.h
mrpt_graphslam_2d/include/mrpt_graphslam_2d/ERD/: CLoopCloserERD_CM.h  CLoopCloserERD_CM_impl.h  CLoopCloserERD_MR.h  CLoopCloserERD_MR_impl.h
mrpt_graphslam_2d/include/mrpt_graphslam_2d/NRD/: CFixedIntervalsNRD_CM.h  CFixedIntervalsNRD_CM_impl.h  CFixedIntervalsNRD_MR.h  CFixedIntervalsNRD_MR_impl.h  CICPCriteriaNRD_CM.h  CICPCriteriaNRD_CM_impl.h  CICPCriteriaNRD_MR.h  CICPCriteriaNRD_MR_impl.h
mrpt_graphslam_2d/include/mrpt_graphslam_2d/misc/: common.h
mrpt_graphslam_2d/launch/: demo.launch  demo_gt.launch  graphslam.launch  mr_graphslam.launch  setup_robot_for_mr_demo.launch  sr_graphslam.launch  sr_graphslam_demo.launch  sr_graphslam_demo_gt.launch
mrpt_graphslam_2d/misc/: default.rviz
mrpt_graphslam_2d/nodes/: rename_rviz_topics.py
mrpt_graphslam_2d/rviz/: README.md  graphslam.rviz  graphslam_bag.rviz  graphslam_bag_1.rviz  graphslam_bag_2.rviz  graphslam_bag_3.rviz  graphslam_gazebo_1.rviz  graphslam_gazebo_2.rviz  graphslam_gazebo_3.rviz  graphslam_gazebo_4.rviz  graphslam_real_1.rviz  graphslam_real_2.rviz  graphslam_real_3.rviz  mr_graphslam.rviz  mr_graphslam_gazebo.rviz  mr_graphslam_real.rviz  sr_graphslam.rviz  sr_graphslam_demo_gt.rviz  sr_graphslam_gazebo.rviz
mrpt_graphslam_2d/rviz/templates/: graphslam_bag_1.rviz  graphslam_bag_2.rviz  graphslam_bag_3.rviz  graphslam_gazebo_1.rviz  graphslam_gazebo_2.rviz  graphslam_gazebo_3.rviz  graphslam_gazebo_4.rviz
mrpt_graphslam_2d/src/: CConnectionManager.cpp  CGraphSlamResources.cpp  CGraphSlam_ROS.cpp  CGraphSlam_ROS_MR.cpp  CMapMerger.cpp  TNeighborAgentMapProps.cpp  TUserOptionsChecker_ROS.cpp  common.cpp  map_merger_node.cpp  mrpt_graphslam_2d_cm_node.cpp  mrpt_graphslam_2d_mr_node.cpp  mrpt_graphslam_2d_node.cpp
mrpt_icp_slam_2d/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mrpt_icp_slam_2d/config/: rosconsole.config
mrpt_icp_slam_2d/include/mrpt_icp_slam_2d/: mrpt_icp_slam_2d.h  mrpt_icp_slam_2d_wrapper.h
mrpt_icp_slam_2d/launch/: icp_slam.launch  icp_slam_gui.launch  icp_slam_rawlog.launch  mvsim_icp_slam.launch
mrpt_icp_slam_2d/rviz/: rviz_conf.rviz
mrpt_icp_slam_2d/src/: icp-2d-slam_main.cpp  mrpt_icp_slam_2d.cpp  mrpt_icp_slam_2d_app.cpp  mrpt_icp_slam_2d_wrapper.cpp
mrpt_icp_slam_2d/tutorial/: icp_slam_demo.ini
mrpt_rbpf_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrpt_rbpf_slam/cfg/: General.cfg  Motion.cfg
mrpt_rbpf_slam/config/: default.yaml  rosconsole.config
mrpt_rbpf_slam/include/mrpt_rbpf_slam/: mrpt_rbpf_slam.h  mrpt_rbpf_slam_wrapper.h  options.h
mrpt_rbpf_slam/include/mrpt_slam/: mrpt_slam.h  mrpt_slam_wrapper.h
mrpt_rbpf_slam/launch/: demo_play.launch  mvsim_slam.launch  rbpf_slam.launch  rbpf_slam2.launch  rbpf_slam_rawlog.launch  rbpf_slam_ro.launch  rbpf_slam_test.launch  rbpf_slam_turtlebot.launch  rbpf_slam_turtlebot3.launch  ro_slam.launch  ro_slam_rawlog.launch  rviz.launch  slam.launch
mrpt_rbpf_slam/msg/: Beacons.msg  SingleBeacon.msg
mrpt_rbpf_slam/rviz/: rviz_conf.rviz
mrpt_rbpf_slam/src/: mrpt_rbpf_slam.cpp  mrpt_rbpf_slam_app.cpp  mrpt_rbpf_slam_node.cpp  mrpt_rbpf_slam_wrapper.cpp  mrpt_slam.cpp  mrpt_slam_app.cpp  mrpt_slam_wrapper.cpp  options.cpp
mrpt_rbpf_slam/tutorial/: RO-SLAM_demo.ini  RO-SLAM_simulatedData_SOG.ini  grid_slam_demo.ini  grid_slam_demo_2.ini
mrpt_ro_slam/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mrpt_ro_slam/cfg/: Motion.cfg  RosInterface.cfg
mrpt_ro_slam/include/: mrpt_ro_slam_node.h  mrpt_ro_slam_node_defaults.h
mrpt_ro_slam/include/mrpt_ro_slam/: mrpt_ro_slam.h  mrpt_ro_slam_core.h  mrpt_ro_slam_defaults.h
mrpt_ro_slam/launch/: demo_ro.launch  demo_rviz_part_only.launch
mrpt_ro_slam/src/: mrpt_ro_slam_node.cpp  mrpt_ro_slam_node_parameters.cpp
mrpt_ro_slam/src/mrpt_ro_slam/: mrpt_ro_slam.cpp  mrpt_ro_slam_core.cpp  mrpt_ro_slam_parameters.cpp
mrpt_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+26 files in other folders)
