<package>
  <name>mrpt_ekf_slam_2d</name>
  <version>0.1.3</version>
  <description>mrpt_ekf_slam_2d</description>
  <maintainer email="jlblanco@ual.es">Jose Luis</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mrpt_ekf_slam_2d</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jose Luis</author>
  <author>Vladislav Tananaev</author>

  <license>BSD</license>


  <license>BSD</license>
  <url>http://mrpt.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mrpt_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>mrpt</build_depend> <!-- Depend on mrpt system pkgs -->

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mrpt_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>mrpt</run_depend> <!-- Depend on mrpt system pkgs -->


</package>
