<?xml version="1.0"?>
<package format="2">
  <name>mrpt_ekf_slam_3d</name>
  <version>0.1.8</version>
  <description>This package is a wrapper for the implementation of EKF-based SLAM with range-bearing sensors, odometry, a full 6D robot pose, and 3D landmarks.</description>
  <maintainer email="jlblanco@ual.es">Jose Luis</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mrpt_ekf_slam_3d</url>
  <url type="bugtracker">https://github.com/mrpt-ros-pkg/mrpt_slam/issues</url>

  <author>Jose Luis</author>
  <author>Vladislav Tananaev</author>

  <url>http://mrpt.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrpt_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cmake_modules</depend>
  <depend>mrpt1</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>mrpt_rawlog</exec_depend>

</package>
