<?xml version="1.0"?>
<package>
  <name>mrpt_graphslam_2d</name>
  <version>0.1.3</version>
  <description>
  	Implement graphSLAM using the mrpt-graphslam library, in an online fashion
  	by directly reading measurements off ROS Topics.
  </description>

  <url type="website">http://www.mrpt.org/</url>
  <url type="documentation">http://wiki.ros.org/mrpt_slam</url>
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <author email="nickkouk@gmail.com">Nikos Koukis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mrpt</build_depend>
  <build_depend>mrpt_bridge</build_depend>
  <build_depend>mrpt_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mrpt</run_depend>
  <run_depend>mrpt_bridge</run_depend>
  <run_depend>mrpt_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
