<?xml version="1.0"?>
<package format="2">
  <name>mrpt_graphslam_2d</name>
  <version>0.1.8</version>
  <description>
  	Implement graphSLAM using the mrpt-graphslam library, in an online fashion
  	by directly reading measurements off ROS Topics.
  </description>

  <url type="website">http://www.mrpt.org/</url>
  <url type="documentation">http://wiki.ros.org/mrpt_slam</url>
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <author email="nickkouk@gmail.com">Nikos Koukis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrpt1</depend>
  <depend>mrpt_bridge</depend>
  <depend>mrpt_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>multimaster_msgs_fkie</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
