<?xml version="1.0"?>
<package format="2">
  <name>mrpt_graphslam_2d</name>
  <version>0.1.16</version>
  <description>
  	Implement graphSLAM using the mrpt-graphslam library, in an online fashion
  	by directly reading measurements off ROS Topics.
  </description>

  <url type="website">http://www.mrpt.org/</url>
  <url type="documentation">https://wiki.ros.org/mrpt_slam</url>
  <maintainer email="nickkouk@gmail.com">Nikos Koukis</maintainer>
  <maintainer email="joseluisblancoc@gmail.com">Jose Luis Blanco-Claraco</maintainer>
  <author email="nickkouk@gmail.com">Nikos Koukis</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrpt2</depend>
  <depend>mrpt_msgs</depend>
  <depend>mrpt_msgs_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>fkie_multimaster_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
