<package>
  <name>mrpt_icp_slam_2d</name>
  <version>1.0.0</version>
  <description>mrpt_icp_slam_2d contains a wrapper on MRPT's 2D ICP-SLAM algorithms.</description>
  <maintainer email="jlblanco@ual.es">Jose Luis Blanco Claraco</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mrpt_icp_slam_2d</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jose Luis Blanco Claraco</author>
  <author>Vladislav Tananaev</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>mrpt</build_depend> <!-- Depend on mrpt system pkgs -->
  <build_depend>mrpt_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>mrpt</run_depend> <!-- Depend on mrpt system pkgs -->
  <run_depend>mrpt_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>mrpt_libs</test_depend> -->
  <!-- <test_depend>mrpt_bridge</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->

</package>